@@ -1,4 +1,6 @@
 base 48
+step 48
+gate 40
 vel 120
 
 chord1(
