@@ -1,5 +1,7 @@
 2015-08-01  Koichi INOUE  <inoue@windy.local>
 
+	* Add `step` and `gate` command to set default ST and GT respectively.
+
 	* Raise error on unclosed parentheses at the end of input.
 
 	* ST and GT was reversed when the note was written in digit.
